--- a/index.html
+++ b/index.html
@@ -5,38 +5,45 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Britlex Language School</title>
+		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Raleway:wght@700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body>
 		<header>
-			<nav>
-				<a href="/">Britlex</a>
-				<ul>
-					<li><a href=""></a>Home</li>
-					<li><a href=""></a>Skills</li>
-					<li><a href=""></a>About Us</li>
-					<li><a href=""></a>Pricing</li>
-					<li><a href=""></a>Contacts</li>
+			<nav class="nav-list">
+				<a href="/" class="logo">Britlex</a>
+				<ul class="list-link">
+					<li><a href="" class="link"></a>Skills</li>
+					<li><a href="" class="link"></a>About Us</li>
+					<li><a href="" class="link"></a>Home</li>
+					<li><a href="" class="link"></a>Pricing</li>
+					<li><a href="" class="link"></a>Contacts</li>
 				</ul>
-				<button type="button">Let’s Talk</button>
+				<button type="button" class="button">Let’s Talk</button>
 			</nav>
 		</header>
 		<main>
-			<section>
-				<h1>Learn Any Foreign Language</h1>
+			<section class="info">
+				<h1 class="title">Learn Any Foreign Language</h1>
 				<p
 					>With our teachers who write a program for each student, you will be able to make your first sketch after the
 					first lesson.</p
 				>
-				<button type="button">Get started</button>
+				<button type="button" class="button">Get started</button>
 				<img src="./images/learning-languages.jpg" alt="girl learning languages" width="654" />
 			</section>
-			<section>
-				<h2>Skills</h2>
+			<section class="skills">
+				<h2 class="title">Skills</h2>
 				<ul>
 					<li>
 						<img src="./images/shared-goals.jpg" alt="Speaking" width="390" />
-						<h3>Speaking</h3>
+						<h3 class="sub-title">Speaking</h3>
 						<p
 							>Improve your English skills and confidence. Live classes and interactive lessons online. 20% extra free
 							for a limited time only Learn English online and improve your skills through our high-quality courses and
@@ -49,105 +56,120 @@
 					</li>
 					<li>
 						<img src="./images/typewriter.jpg" alt="Writing" width="390" />
-						<h3>Writing</h3>
+						<h3 class="sub-title">Writing</h3>
 						<p
 							>One of the most important and extensive areas of natural science, the science that studies substances,
 							also their composition</p
 						>
-						<a href="">Learn more</a>
+						<details>
+							<summary>Learn more</summary>
+							Improve your writing skills
+						</details>
 					</li>
 					<li>
 						<img src="./images/house-bookshelves.jpg" alt="Reading" width="390" />
-						<h3>Reading</h3>
+						<h3 class="sub-title">Reading</h3>
 						<p
 							>Perception and response actions of the user resulting from the use and/or upcoming use of the product,
 							system or service</p
 						>
-						<a href="">Learn more</a>
+						<details>
+							<summary>Learn more</summary>
+							Improve your reading skills
+						</details>
 					</li>
 					<li>
 						<img src="./images/podcast-audience.jpg" alt="Listening" width="408" />
-						<h3>Listening</h3>
+						<h3 class="sub-title">Listening</h3>
 						<p
 							>Here you can find activities to practise your listening skills. Listening will help you to improve your
 							understanding</p
 						>
-						<a href="">Learn more</a>
+						<details>
+							<summary>Learn more</summary>
+							Improve your listening skills
+						</details>
 					</li>
 				</ul>
 			</section>
-			<h2>About Us</h2>
-			<p
-				>The model offers a framework for discussing problems related to the user's experience, as well as possible ways
-				and means of solving them. Application development begins at the top level (strategy), where the future software
-				product is described quite abstractly from the point of view of the expectations of both users and the
-				customer.</p
-			>
-			<ul>
-				<li>
-					<p>800</p>
-					<p>Pupils</p>
-				</li>
-				<li>
-					<p>18</p>
-					<p>Teachers</p>
-				</li>
-				<li>
-					<p>6</p>
-					<p>Foreign languages</p>
-				</li>
-			</ul>
-			<img src="./images/business-competition.jpg" alt="achievements" width="540" />
-			<section>
-				<h2>Pricing</h2>
+			<section class="about">
+				<h2 class="title">About Us</h2>
+				<p
+					>The model offers a framework for discussing problems related to the user's experience, as well as possible
+					ways and means of solving them. Application development begins at the top level (strategy), where the future
+					software product is described quite abstractly from the point of view of the expectations of both users and
+					the customer.</p
+				>
+				<ul>
+					<li>
+						<p class="number">800</p>
+						<p class="value">Pupils</p>
+					</li>
+					<li>
+						<p class="number">18</p>
+						<p class="value">Teachers</p>
+					</li>
+					<li>
+						<p class="number">6</p>
+						<p class="value">Foreign languages</p>
+					</li>
+				</ul>
+				<img src="./images/business-competition.jpg" alt="achievements" width="540" />
+			</section>
+			<section class="prising">
+				<h2 class="title">Pricing</h2>
 				<ul>
 					<li>
 						<img src="./images/online.jpg" alt="online studying" width="426" />
-						<h3>Self-study online course</h3>
+						<h3 class="sub-title">Self-study online course</h3>
 						<p
 							>Start learning English online in live classes with qualified EC teachers and students from all over the
 							world.</p
 						>
 						<ul>
 							<li>
-								<p>£5.99</p>
-								<p>per month</p>
+								<p class="price">£5.99</p>
+								<p class="freq">per month</p>
 							</li>
 						</ul>
 						<img src="./images/lesson.jpg" alt="lessons" width="426" />
-						<h3>Live online classes</h3>
+						<h3 class="sub-title">Live online classes</h3>
 						<p>Interactive group classes with expert teachers. Free 7-day trial</p>
 						<ul>
 							<li>
-								<p>£12.99</p>
-								<p>per month</p>
+								<p class="price">£12.99</p>
+								<p class="freq">per month</p>
 							</li>
 						</ul>
 						<img src="./images/webinar.jpg" alt="webinar" width="426" />
-						<h3>Personal Tuition</h3>
+						<h3 class="sub-title">Personal Tuition</h3>
 						<p>Online one-to-one English tutoring – enjoy our first session for only $1</p>
 						<ul>
 							<li>
-								<p>£12.99</p>
-								<p>per month</p>
+								<p class="price">£12.99</p>
+								<p class="freq">per month</p>
 							</li>
 						</ul>
 					</li>
 				</ul>
 			</section>
-			<section>
-				<h2>Contact Us</h2>
+			<section class="contacts">
+				<h2 class="title">Contact Us</h2>
 				<img src="./images/group.jpg" alt="send us email" />
 				<p
 					>Discover your current English level by taking our free online English test. Sign up to our newsletter for
 					learning tips and free resources</p
 				>
-				<form><input type="text" placeholder="Enter Your E-mail" /><button type="submit">Subscribe</button></form>
+				<form
+					><input type="text" placeholder="Enter Your E-mail" /><button type="submit" class="button"
+						>Subscribe</button
+					></form
+				>
 			</section>
 		</main>
 		<footer>
-			<a href="">Britlex</a>
-			<ul>
+			<a href="/" class="logo">Britlex</a>
+			<ul class="terms">
 				<li><a href="">Terms and Conditions</a></li>
 				<li><a href="">Privacy Policy</a></li>
 				<li><a href="">Cookie Policy</a></li>
