--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<header>
 			<nav class="nav-list">
-				<a href="/" class="logo">Britlex</a>
+				<a href="/" class="logo"><span>Brit</span>lex</a>
 				<ul class="list-link">
 					<li><a href="" class="link"></a>Skills</li>
 					<li><a href="" class="link"></a>About Us</li>
@@ -168,7 +168,7 @@
 			</section>
 		</main>
 		<footer>
-			<a href="/" class="logo">Britlex</a>
+			<a href="/" class="logo"><span>Brit</span>lex</a>
 			<ul class="terms">
 				<li><a href="">Terms and Conditions</a></li>
 				<li><a href="">Privacy Policy</a></li>
